--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
 
   </script>
 <br><br>
-<h2>
-  Schedule raw text (sorry for the default html style)
-</h2>
+  <h4><a href="https://docs.google.com/document/d/1yBXsZ641B_X5DGjqePDaCXA_2Yww2zaHQ0bur-0KYGw/edit?usp=sharing" target="_blank">Project Types Document</a></h4>
 <ul>
-  <li><b>Project Pitches</b>
+  <li><b><a href="https://northeastern.instructure.com/courses/176090/assignments/2184585" target="_blank">Project Pitches</a></b>
   <ul><li>Prepare project pitch for in-class <b>1/26</b></li></ul>
   </li>
-  <li><b>Project Proposal</b>
+  <li><b><a href="https://northeastern.instructure.com/courses/176090/assignments/2189136" target="_blank">Project Proposal</a></b>
   <ul><li>Complete project proposal - due <b>2/2</b></li></ul>
   </li>
   <li><b>Project Design</b>
