Add a lil sauce

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <style>
     .error {
         color: red;
@@ -10,7 +11,7 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm//vega-lite@4.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm//vega-embed@6"></script>
 </head>
-<body>
+<body class="ml-4 mt-4">
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
@@ -32,7 +33,9 @@
 
   </script>
 <br><br>
-  <h4><a href="https://docs.google.com/document/d/1yBXsZ641B_X5DGjqePDaCXA_2Yww2zaHQ0bur-0KYGw/edit?usp=sharing" target="_blank">Project Types Document</a></h4>
+  <h4>Project Resources</h4>
+  <ul><li><b><a href="https://docs.google.com/document/d/1yBXsZ641B_X5DGjqePDaCXA_2Yww2zaHQ0bur-0KYGw/edit?usp=sharing" target="_blank">Project Types Document</a></b></li></ul>
+  <h4>Raw Text Descriptions for Assignments (including links to Canvas!):</h4>
 <ul>
   <li><b><a href="https://northeastern.instructure.com/courses/176090/assignments/2184585" target="_blank">Project Pitches</a></b>
   <ul><li>Prepare project pitch for in-class <b>1/26</b></li></ul>
