--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <li><b><a href="https://northeastern.instructure.com/courses/176090/assignments/2189136" target="_blank">Project Proposal</a></b>
   <ul><li>Complete project proposal - due <b>2/2</b></li></ul>
   </li>
-  <li><b>Project Design</b>
+  <li><b><a href="https://northeastern.instructure.com/courses/176090/assignments/2196763" target="_blank">Project Design</a></b>
     <ul><li>Create project design (data gathering and questions, sketches+storyboards, evaluation plan) - due <b>2/23</b></li></ul>
   </li>
   <li><b>Peer Review</b>
