--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <li><b><a href="https://northeastern.instructure.com/courses/176090/assignments/2196763" target="_blank">Project Design</a></b>
     <ul><li>Create project design (data gathering and questions, sketches+storyboards, evaluation plan) - due <b>2/23</b></li></ul>
   </li>
-  <li><b>Peer Review</b>
+  <li><b><a href="https://northeastern.instructure.com/courses/176090/assignments/2210345" target="_blank">Peer Review</a></b>
   <ul><li>Complete peer review for project design deliverables - due <b>3/1</b></li></ul>
   </li>
   <li><b>Milestone 1</b>
